--- a/LNAB_PuppeteerSharp.csproj
+++ b/LNAB_PuppeteerSharp.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="PuppeteerSharp" Version="20.2.2" />
     <PackageReference Include="System.ServiceModel.NetTcp" Version="8.1.2" />
     <PackageReference Include="System.ServiceModel.Primitives" Version="8.1.2" />
+	  <PackageReference Include="System.Configuration.ConfigurationManager" Version="*" />
   </ItemGroup>
 
 </Project>
